syntax = "proto3";
import "Protos/Widgets/Models/Widget.proto";

package GrpcLibrary.Widgets;

message GetWidgetsRequest {}

message GetWidgetsResponse
{
  bool is_success = 1;
  string error = 2;
  repeated Widget widgets = 3;
}