syntax = "proto3";
import "Protos/Widgets/Messages/GetWidgets.proto";

package GrpcLibrary.Widgets;

service WidgetsService
{
  rpc GetWidgets(GetWidgetsRequest) returns (GetWidgetsResponse);
}